--- a/index.html
+++ b/index.html
@@ -23,18 +23,23 @@
             --btn-text: #000000;
         }
 
+        /* КИСЛОТНЫЙ РЕЖИМ ПНВ С ГЛУБОКИМ ЧЕРНЫМ */
         body.custom-mode {
-            --bg-color: #050a05;
+            --bg-color: #000000;
             --main-color: #000000;
             --bg-image: url('r4.6.png');
-            --gallery-filter: sepia(100%) hue-rotate(85deg) brightness(0.9) saturate(7) contrast(1.5); 
-            --bg-filter: sepia(100%) hue-rotate(85deg) brightness(0.9) saturate(7) contrast(1.5);
+            --gallery-filter: sepia(100%) hue-rotate(85deg) brightness(0.8) saturate(6) contrast(1.8); 
+            --bg-filter: sepia(100%) hue-rotate(85deg) brightness(0.8) saturate(6) contrast(1.8);
             --btn-bg: #000000;
             --btn-text: #39FF14;
-            background-blend-mode: color;
-            background-color: rgba(0, 255, 0, 0.5);
-            --overlay: radial-gradient(circle, transparent 20%, rgba(0,15,0,0.6) 75%, rgba(0,0,0,0.95) 100%),
-                       repeating-linear-gradient(0deg, rgba(57, 255, 20, 0.12) 0px, rgba(57, 255, 20, 0.12) 1px, transparent 2px, transparent 4px);
+
+            background-blend-mode: multiply;
+            background-color: #39FF14; 
+
+            --overlay:
+                radial-gradient(circle, transparent 20%, rgba(0,0,0,0.4) 70%, rgba(0,0,0,0.9) 100%),
+                repeating-linear-gradient(0deg, rgba(57, 255, 20, 0.08) 0px, rgba(57, 255, 20, 0.08) 1px, transparent 2px, transparent 4px);
+
             animation: nv-flicker 0.1s infinite;
         }
 
@@ -68,6 +73,7 @@
             pointer-events: none; z-index: 999999;
             mix-blend-mode: difference;
             background: #fff; opacity: 0;
+            will-change: transform, opacity;
             transition: opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
@@ -85,19 +91,10 @@
         }
 
         h1 { font-size: 14px; font-weight: bold; text-transform: uppercase; margin: 0; color: var(--main-color); transition: color 0.4s ease, font-size 0.8s ease; }
-        
-        .location-text { 
-            font-size: 9.5px; 
-            text-transform: uppercase; 
-            margin-top: 1px; 
-            opacity: 0; 
-            color: var(--main-color); 
-            transition: color 0.4s ease, opacity 0.5s ease; /* Убрана задержка, добавлен переход цвета */
-        }
-        
+        .location-text { font-size: 9.5px; text-transform: uppercase; margin-top: 1px; opacity: 0; color: var(--main-color); transition: color 0.4s ease, opacity 0.5s ease; }
         .title-wrapper.moved { top: 40px; transform: translateY(0); }
         .title-wrapper.moved h1 { font-size: 24px; }
-        .title-wrapper.moved .location-text { opacity: 1; } /* Задержка появления удалена для быстроты смены темы */
+        .title-wrapper.moved .location-text { opacity: 1; }
 
         .content-fade {
             opacity: 0; visibility: hidden; transition: 0.8s;
@@ -138,10 +135,7 @@
         }
         .tooltip-wrapper:hover .tooltip-content { display: block; }
 
-        @media (min-width: 500px) {
-            .content-fade { align-self: center; }
-            .title-wrapper { left: calc(50% - 230px); }
-        }
+        @media (min-width: 500px) { .content-fade { align-self: center; } .title-wrapper { left: calc(50% - 230px); } }
     </style>
 </head>
 <body oncontextmenu="return false;">
@@ -150,7 +144,7 @@
     <audio id="custom-music" loop><source src="music1.mp3" type="audio/mpeg"></audio>
 
     <div class="top-bar" id="top-bar">
-        <div id="marquee-text">ALL BUTTONS CLICKABLE  /  [ HOLD  TO  STOP  TEXT ]</div>
+        <div id="marquee-text">ALL BUTTONS CLICKABLE  /</div>
     </div>
 
     <div class="title-wrapper" id="main-title">
@@ -159,10 +153,10 @@
     </div>
 
     <div class="content-fade" id="main-content">
-        <a href="https://instagram.com/ogdnka" class="link-text" target="_blank">Inst: @ogdnka</a>
-        <a href="https://t.me/eeleve" class="link-text" target="_blank">tgk: @11</a>
-        <a href="https://twitch.tv/bananapapa228" class="link-text" target="_blank">Twitch: @bananapapa228</a>
-        <a href="https://tiktok.com/@dnkanle" class="link-text" target="_blank">tiktok: @dnkanle</a>
+        <a href="https://instagram.com" class="link-text" target="_blank">Inst: @ogdnka</a>
+        <a href="https://t.me" class="link-text" target="_blank">tgk: @11</a>
+        <a href="https://twitch.tv" class="link-text" target="_blank">Twitch: @bananapapa228</a>
+        <a href="https://tiktok.com" class="link-text" target="_blank">tiktok: @dnkanle</a>
         <a href="javascript:void(0)" class="link-text" id="discord-btn">discord: @dnka</a>
 
         <div class="gallery-container">
@@ -252,15 +246,17 @@
         topBar.addEventListener('pointerdown', () => marqueeTargetSpeed = 0);
         window.addEventListener('pointerup', () => marqueeTargetSpeed = 2.0);
 
-        const updateCursorPos = (e) => {
+        // УНИВЕРСАЛЬНОЕ ОТСЛЕЖИВАНИЕ КУРСОРА (ПК + МОБИЛКИ)
+        const updatePos = (e) => {
             cursor.style.opacity = '1';
-            const touch = (e.touches && e.touches.length > 0) ? e.touches : e;
-            mouseX = touch.clientX; mouseY = touch.clientY;
+            let ev = e.touches ? e.touches[0] : e;
+            mouseX = ev.clientX;
+            mouseY = ev.clientY;
         };
 
-        window.addEventListener('mousemove', updateCursorPos, { passive: true });
-        window.addEventListener('touchstart', updateCursorPos, { passive: true });
-        window.addEventListener('touchmove', updateCursorPos, { passive: true });
+        window.addEventListener('mousemove', updatePos, { passive: true });
+        window.addEventListener('touchstart', updatePos, { passive: true });
+        window.addEventListener('touchmove', updatePos, { passive: true });
         document.addEventListener('mouseleave', () => cursor.style.opacity = '0');
         document.addEventListener('mouseenter', () => cursor.style.opacity = '1');
         window.addEventListener('blur', () => cursor.style.opacity = '0');
