--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <audio id="custom-music" loop><source src="music1.mp3" type="audio/mpeg"></audio>
 
     <div class="top-bar" id="top-bar">
-        <div id="marquee-text">ALL BUTTONS CLICKABLE  /</div>
+        <div id="marquee-text">ALL BUTTONS CLICKABLE       [  HOLD  TO  STOP  TEXT  ]/</div>
     </div>
 
     <div class="title-wrapper" id="main-title">
@@ -163,10 +163,10 @@
     </div>
 
     <div class="content-fade" id="main-content">
-        <a href="https://instagram.com" class="link-text" target="_blank">Inst: @ogdnka</a>
-        <a href="https://t.me" class="link-text" target="_blank">tgk: @11</a>
-        <a href="https://twitch.tv" class="link-text" target="_blank">Twitch: @bananapapa228</a>
-        <a href="https://tiktok.com" class="link-text" target="_blank">tiktok: @dnkanle</a>
+        <a href="https://instagram.com/ogdnka" class="link-text" target="_blank">Inst: @ogdnka</a>
+        <a href="https://t.me/eeleve" class="link-text" target="_blank">tgk: @11</a>
+        <a href="https://twitch.tv/bananapapa228" class="link-text" target="_blank">Twitch: @bananapapa228</a>
+        <a href="https://tiktok.com/@dnkanle" class="link-text" target="_blank">tiktok: @dnkanle</a>
         <a href="javascript:void(0)" class="link-text" id="discord-btn">discord: @dnka</a>
 
         <div class="gallery-container">
@@ -329,3 +329,4 @@
     </script>
 </body>
 </html>
+
