--- a/index.html
+++ b/index.html
@@ -85,10 +85,22 @@
         }
 
         .top-bar {
-            background: var(--top-bar-bg); color: var(--top-bar-text); font-size: 10px; height: 22px;
-            display: flex; align-items: center; position: fixed; top: 0; width: 100%;
-            opacity: 0; transition: 0.4s ease; z-index: 100; overflow: hidden;
-            letter-spacing: 0.5px; /* Сохранено */
+            background: var(--top-bar-bg); 
+            color: var(--top-bar-text); 
+            font-size: 10px; 
+            /* Добавляем поддержку "челки" */
+            padding-top: env(safe-area-inset-top); 
+            height: calc(22px + env(safe-area-inset-top));
+            display: flex; 
+            align-items: center; 
+            position: fixed; 
+            top: 0; 
+            width: 100%;
+            opacity: 1; /* Появляется сразу */
+            transition: 0.4s ease; 
+            z-index: 100; 
+            overflow: hidden;
+            letter-spacing: 0.5px;
         }
 
         #marquee-text { white-space: nowrap; will-change: transform; }
@@ -101,7 +113,7 @@
         h1 { 
             font-size: 14px; font-weight: bold; text-transform: uppercase; margin: 0; 
             color: var(--main-color); transition: color 0.4s ease, font-size 0.8s ease;
-            letter-spacing: -0.5px; /* Самое маленькое расстояние */
+            letter-spacing: -0.5px;
         }
         
         .location-text { 
@@ -110,13 +122,15 @@
             letter-spacing: 0.5px; 
         }
 
-        .title-wrapper.moved { top: 40px; transform: translateY(0); }
+        .title-wrapper.moved { top: calc(40px + env(safe-area-inset-top)); transform: translateY(0); }
         .title-wrapper.moved h1 { font-size: 24px; }
         .title-wrapper.moved .location-text { opacity: 1; }
 
         .content-fade {
             opacity: 0; visibility: hidden; transition: 0.8s;
-            padding: 20px; margin-top: 75px; width: 100%; max-width: 500px;
+            padding: 20px; 
+            margin-top: calc(85px + env(safe-area-inset-top)); 
+            width: 100%; max-width: 500px;
             display: flex; flex-direction: column;
         }
         .content-fade.visible { opacity: 1; visibility: visible; }
@@ -125,7 +139,7 @@
             display: block; font-weight: bold; font-size: 13px; text-transform: uppercase;
             color: var(--main-color); text-decoration: none; margin-bottom: 5px; padding: 8px 0;
             border-bottom: 1px solid var(--main-color); transition: 0.4s ease;
-            letter-spacing: 0.2px; /* Чуть меньше обычного */
+            letter-spacing: 0.2px;
         }
 
         .gallery-container { overflow: hidden; width: 100%; margin-top: 20px; }
@@ -135,11 +149,13 @@
         .copyright { 
             font-size: 8px; text-transform: uppercase; color: var(--main-color); 
             margin-top: 5px; transition: 0.4s ease;
-            letter-spacing: 0.5px; /* Сохранено */
+            letter-spacing: 0.5px;
         }
 
         .bottom-bar {
-            position: fixed; bottom: 0; left: 50%; transform: translateX(-50%);
+            position: fixed; 
+            bottom: env(safe-area-inset-bottom); /* Отступ снизу для iPhone */
+            left: 50%; transform: translateX(-50%);
             width: 100%; max-width: 500px; padding: 15px 20px;
             display: flex; justify-content: space-between; align-items: flex-end; z-index: 200;
         }
@@ -148,7 +164,7 @@
             background: var(--btn-bg); color: var(--btn-text); border: none; padding: 8px 12px;
             font-family: 'Bookish Book', sans-serif; font-size: 10px;
             text-transform: uppercase; transition: 0.4s ease;
-            letter-spacing: 0.5px; /* Сохранено */
+            letter-spacing: 0.5px;
         }
 
         .tooltip-wrapper { position: relative; }
@@ -181,10 +197,10 @@
     </div>
 
     <div class="content-fade" id="main-content">
-        <a href="https://instagram.com/ogdnka" class="link-text" target="_blank">Inst: @ogdnka</a>
-        <a href="https://t.me/eeleve" class="link-text" target="_blank">tgk: @11</a>
-        <a href="https://twitch.tv/bananapapa228" class="link-text" target="_blank">Twitch: @bananapapa228</a>
-        <a href="https://tiktok.com/@dnkanle" class="link-text" target="_blank">tiktok: @dnkanle</a>
+        <a href="https://instagram.com" class="link-text" target="_blank">Inst: @ogdnka</a>
+        <a href="https://t.me" class="link-text" target="_blank">tgk: @11</a>
+        <a href="https://twitch.tv" class="link-text" target="_blank">Twitch: @bananapapa228</a>
+        <a href="https://tiktok.com" class="link-text" target="_blank">tiktok: @dnkanle</a>
         <a href="javascript:void(0)" class="link-text" id="discord-btn">discord: @dnka</a>
 
         <div class="gallery-container">
@@ -226,7 +242,7 @@
         let mouseX = window.innerWidth / 2, mouseY = window.innerHeight / 2;
         let cursorX = mouseX, cursorY = mouseY, animationsStarted = false;
 
-        const phrases = ["ALL BUTTONS CLICKABLE / HOLD TO STOP TEXT", "DM ME FOR ADS/SONG - @EELEVEX (4FREE)"];
+        const phrases =;
         let currentPhraseIdx = 0, marqueeCurrentSpeed = 2.0, marqueeTargetSpeed = 2.0, galleryPos = 0, targetSpeed = 0;
 
         function updateMusic() {
@@ -270,7 +286,6 @@
 
         modeBtn.addEventListener('pointerdown', handleStart);
         window.addEventListener('pointerup', handleEnd);
-
         topBar.addEventListener('pointerdown', () => marqueeTargetSpeed = 0);
         window.addEventListener('pointerup', () => marqueeTargetSpeed = 2.0);
 
@@ -306,7 +321,6 @@
                     document.getElementById('main-title').classList.add('moved');
                     setTimeout(() => {
                         document.getElementById('main-content').classList.add('visible');
-                        document.getElementById('top-bar').style.opacity = '1';
                         animationsStarted = true;
                     }, 1000);
                 }, 800);
@@ -347,6 +361,3 @@
     </script>
 </body>
 </html>
-
-
-
