--- a/index.html
+++ b/index.html
@@ -66,8 +66,6 @@
             background-image: var(--overlay), var(--bg-image);
             background-size: cover;
             background-position: center;
-            backdrop-filter: var(--bg-filter);
-            -webkit-backdrop-filter: var(--bg-filter);
             color: var(--main-color);
             margin: 0; height: 100vh; width: 100vw;
             overflow: hidden; display: flex; flex-direction: column; align-items: center;
@@ -88,7 +86,6 @@
             background: var(--top-bar-bg); 
             color: var(--top-bar-text); 
             font-size: 10px; 
-            /* Добавляем поддержку "челки" */
             padding-top: env(safe-area-inset-top); 
             height: calc(22px + env(safe-area-inset-top));
             display: flex; 
@@ -96,8 +93,7 @@
             position: fixed; 
             top: 0; 
             width: 100%;
-            opacity: 1; /* Появляется сразу */
-            transition: 0.4s ease; 
+            opacity: 1;
             z-index: 100; 
             overflow: hidden;
             letter-spacing: 0.5px;
@@ -154,7 +150,7 @@
 
         .bottom-bar {
             position: fixed; 
-            bottom: env(safe-area-inset-bottom); /* Отступ снизу для iPhone */
+            bottom: env(safe-area-inset-bottom);
             left: 50%; transform: translateX(-50%);
             width: 100%; max-width: 500px; padding: 15px 20px;
             display: flex; justify-content: space-between; align-items: flex-end; z-index: 200;
@@ -234,7 +230,6 @@
         const modeBtn = document.getElementById('mode-btn');
         const gallery = document.getElementById('gallery-anim');
         const marqueeEl = document.getElementById('marquee-text');
-        const topBar = document.getElementById('top-bar');
         const discordBtn = document.getElementById('discord-btn');
         const soundTooltip = document.getElementById('sound-tooltip');
 
@@ -286,8 +281,6 @@
 
         modeBtn.addEventListener('pointerdown', handleStart);
         window.addEventListener('pointerup', handleEnd);
-        topBar.addEventListener('pointerdown', () => marqueeTargetSpeed = 0);
-        window.addEventListener('pointerup', () => marqueeTargetSpeed = 2.0);
 
         const updatePos = (e) => {
             cursor.style.opacity = '1';
@@ -301,7 +294,6 @@
         window.addEventListener('touchmove', updatePos, { passive: true });
         document.addEventListener('mouseleave', () => cursor.style.opacity = '0');
         document.addEventListener('mouseenter', () => cursor.style.opacity = '1');
-        window.addEventListener('blur', () => cursor.style.opacity = '0');
 
         discordBtn.addEventListener('click', () => {
             navigator.clipboard.writeText('dnka').then(() => {
@@ -329,8 +321,8 @@
 
         let marqueePos = window.innerWidth;
         function loop() {
-            cursorX += (mouseX - cursorX) * 0.25;
-            cursorY += (mouseY - cursorY) * 0.25;
+            cursorX += (mouseX - cursorX) * 0.15;
+            cursorY += (mouseY - cursorY) * 0.15;
             cursor.style.transform = `translate3d(${cursorX}px, ${cursorY}px, 0) translate(-50%, -50%)`;
 
             if (animationsStarted) {
